Added second traverser to catch already translated values